--- a/HW2-1/index.html
+++ b/HW2-1/index.html
@@ -127,6 +127,10 @@
 				margin:20px 0px 30px;
 				}	
 				
+			.submitButton:hover{
+				background-color:rgb(174,18,73);
+				}
+					
 			.submitButton{
 
 				width:100%;
